--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Vous avez besoin d'une salle pour travailler ?
+    Utilisez cette page pour trouver des salles libres et savoir quand elles seront disponibles.
+    Sélectionnez une date et une heure pour voir les salles disponibles à ce moment-là.">
+    <meta name="keywords" content="univ, université, avignon, université avignon, univ avignon, uapv, e-uapv, univ-avignon, salles, salles libres, tidic, réservation">
+    <meta name="robots" content="index, follow">
     <title>Salles Libres</title>
     <link href="/salles/public/style.css" rel="stylesheet" />
     <script>
